--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "@prisma/client": "^4.15.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.17.0",
-    "pg": "^8.11.0",
-    "pg-node-migrations": "0.0.8",
+    "next": "^13.4.4",
     "pino": "^8.14.1",
     "prisma": "^4.15.0",
-    "stripe": "^8.222.0",
-    "yesql": "^6.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^8.222.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
