--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stripe sync engine. Sync your Stripe account to your Postgres database.",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --log-error --files ./src/server.ts",
+    "dev": "next dev",
     "build": "tsc -p tsconfig.json",
     "start": "NODE_ENV=production node dist/server.js",
     "test": "node -r dotenv/config node_modules/.bin/jest --bail --detectOpenHandles",
@@ -47,15 +47,19 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
     "@types/pg": "^8.10.1",
+    "@types/react": "18.2.9",
     "@types/yesql": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "autoprefixer": "^10.4.14",
     "crypto": "^1.0.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
