--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "^4.15.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.17.0",
+    "micro": "^10.0.1",
     "next": "^13.4.4",
     "pino": "^8.14.1",
     "prisma": "^4.15.0",
@@ -57,6 +58,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "node-mocks-http": "^1.12.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
